# mcpkernel

./: .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  KANBAN.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: policy-writing.instructions.md  python-conventions.instructions.md  testing-guidelines.instructions.md
.github/skills/docs-sync/: SKILL.md
.github/skills/research-and-improve/: SKILL.md
.github/skills/search-and-fix/: SKILL.md
.github/skills/test-and-merge/: SKILL.md
.github/workflows/: ci.yml  docs.yml  monthly-agents.yml  monthly-agents.yml.bak  release.yml  security.yml
.plugin/: plugin.json
USAGE/: index.html
api/reference/: index.html
blog/: SEO_STRATEGY.md  dev-to-announcement.md  medium-article.md  reddit-hackernews-posts.md  twitter-linkedin-posts.md
cli/reference/: index.html
compliance/presets/: index.html
core/audit/: index.html
core/dee/: index.html
core/policy-engine/: index.html
core/sandbox/: index.html
core/taint-tracking/: index.html
deploy/: prometheus.yml
docs/: USAGE.md  index.md  troubleshooting.md
docs/api/: reference.md
docs/cli/: reference.md
docs/compliance/: presets.md
docs/core/: audit.md  dee.md  policy-engine.md  sandbox.md  taint-tracking.md
docs/examples/: basic.md  end-to-end.md  policies.md  security-pipeline.md  taint.md  trust-graph.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/integrations/: frameworks.md  ide-setup.md  registry.md
docs/security/: attack-defenses.md  overview.md
docs/trust/: behavioral.md  causal-trust-graph.md  retroactive.md  trust-decay.md
examples/: copilot_guard_example.py  crewai_example.py  langchain_example.py
examples/autogen/: autogen_example.py
examples/basic/: index.html
examples/copilot_guard/: copilot_guard_example.py
examples/crewai/: crewai_example.py
examples/end-to-end/: index.html
examples/langchain/: langchain_example.py
examples/mcp_agent/: config.yaml  mcp_agent_example.py
examples/policies/: index.html
examples/security-pipeline/: index.html
examples/simple_mcp_server/: config.yaml  server.py
examples/taint/: index.html
examples/trust-graph/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
integrations/frameworks/: index.html
integrations/ide-setup/: index.html
integrations/registry/: index.html
policies/: custom_template.yaml  minimal.yaml  owasp_asi_2026_strict.yaml
rules/: mcpkernel-security.mdc
search/: search_index.json
security/attack-defenses/: index.html
security/overview/: index.html
skills/mcpkernel-security/: SKILL.md
src/mcpguard/: __init__.py  cli.py  config.py  utils.py
src/mcpguard/audit/: __init__.py  exporter.py  logger.py
src/mcpguard/context/: __init__.py  dependency_graph.py  pruning.py  reducer.py
src/mcpguard/dee/: __init__.py  drift.py  envelope.py  replay.py  snapshot.py  trace_store.py
src/mcpguard/ebpf/: __init__.py  probe.py  redirector.py
src/mcpguard/observability/: __init__.py  health.py  metrics.py  tracing.py
src/mcpguard/policy/: __init__.py  engine.py  loader.py
src/mcpguard/proxy/: __init__.py  auth.py  hooks.py  interceptor.py  rate_limit.py  server.py  transform.py
src/mcpguard/sandbox/: __init__.py  docker_backend.py  firecracker_backend.py  microsandbox_backend.py  wasm_backend.py
src/mcpguard/taint/: __init__.py  propagation.py  report.py  sinks.py  sources.py  static_analysis.py  tracker.py
src/mcpkernel/: __init__.py  __main__.py  api.py  cli.py  compliance.py  config.py  mcp_server.py  presets.py  security.py  utils.py
src/mcpkernel/agent_manifest/: __init__.py  hooks.py  loader.py  policy_bridge.py  tool_validator.py
src/mcpkernel/audit/: __init__.py  exporter.py  logger.py  sarif.py
src/mcpkernel/context/: __init__.py  dependency_graph.py  pruning.py  reducer.py
src/mcpkernel/dee/: __init__.py  drift.py  envelope.py  replay.py  snapshot.py  trace_store.py
src/mcpkernel/ebpf/: __init__.py  probe.py  redirector.py
src/mcpkernel/integrations/: __init__.py  agent_scan.py  discovery.py  doctor.py  guardrails.py  installer.py  langfuse.py  poisoning.py  registry.py  skill_scanner.py
src/mcpkernel/observability/: __init__.py  health.py  metrics.py  tracing.py
src/mcpkernel/policy/: __init__.py  engine.py  loader.py  watcher.py
src/mcpkernel/proxy/: __init__.py  auth.py  hooks.py  interceptor.py  rate_limit.py  server.py  transform.py  upstream.py
src/mcpkernel/sandbox/: __init__.py  base.py  docker_backend.py  firecracker_backend.py  microsandbox_backend.py  wasm_backend.py
src/mcpkernel/taint/: __init__.py  dlp.py  propagation.py  report.py  (+4 more)
tests/: conftest.py  test_agent_manifest.py  test_api.py  test_audit.py  test_auth_backends.py  test_cli_commands.py  test_compliance.py  test_comprehensive_coverage.py  test_config.py  test_context.py  test_coverage_boost.py  test_coverage_gaps.py  test_dee.py  test_doctor.py  test_hooks.py  test_installer.py  test_integration.py  test_integrations.py  test_mcp_server.py  test_new_features.py  test_observability.py  test_policy.py  test_policy_regex_safety.py  test_production_hardening.py  test_proxy.py  test_security.py  test_skill_scanner.py  test_sprint1_fixes.py  test_taint.py  test_trust.py  test_upstream.py  test_utils.py
troubleshooting/: index.html
trust/behavioral/: index.html
trust/causal-trust-graph/: index.html
trust/retroactive/: index.html
trust/trust-decay/: index.html
vscode-extension/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/schemas/: config.schema.json  policy.schema.json
vscode-extension/src/: extension.ts
(+5 files in other folders)
